# Cardiomaton_code

./: .gitignore  README.md  cardiomaton.bat  cardiomaton.sh  main.ipynb  main.py  pyproject.toml  setup.py
cardiomaton_code/: how_to_pyinstaller.md  main.ipynb  main.py  main_with_front.py  populate_db.py  setup.py
cardiomaton_code/build_tools/: cardiomaton_linux.spec  cardiomaton_windows.spec  dev_tasks.py
cardiomaton_code/resources/data/: av_block_i.json  cell_data.json  cell_data_av_block_i.json  sa_block_retrograde.json  sinus_bradycardia.json  sinus_pause_retrograde.json  sinus_tachycardia.json
cardiomaton_code/resources/db/: cardiomaton.db
cardiomaton_code/resources/func_coeffs/: aprox_coeffs.json  spline_coeffs.json
cardiomaton_code/resources/icon/: logo.icns
cardiomaton_code/resources/style/: accessibility_mode.qss  dark_mode.qss  light_mode.qss  main_window.qss  main_winow_style.css
cardiomaton_code/src/controllers/: simulation_controller.py
cardiomaton_code/src/database/: db.py
cardiomaton_code/src/frontend/: action_potential_generator.py  cell_inspector.py  cell_modificator.py  frame_recorder.py  frame_renderer.py  graph_widget.py  help_window.py  main_label.py  main_window.py  parameter_panel.py  playback_navigation.py  simulation_controller.py  simulation_loop.py  simulation_window.py  ui_main_window.py  ui_mainwindow.py  ui_simulation_window.py
cardiomaton_code/src/models/: automaton.py  automaton_new.c  automaton_new.pyx  cell.py  cell_new.c  cell_new.pxd  cell_new.pyx  (+3 more)
develop_ideas/: new_backend.md
func_approximation_ap/: file.py
models/: automaton.py  cell.py  cell_state.py  cellular_graph.py
potentials/: atrial.ipynb  pacemakers.ipynb  purkinje.ipynb
resources/img_ccs/: CCS_info.json
subgraphs/: revised.ipynb
utils/: data_reader.py
(+98 files in other folders)
