[project]
name = "cardiomaton-code"
version = "0.1.0"
description = ""
authors = [
    {name = "michal1mroz",email = "mmroz@student.agh.edu.pl"}
]
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "numpy (>=2.2.5,<3.0.0)",
    "matplotlib (>=3.10.3,<4.0.0)",
    "networkx (>=3.4.2,<4.0.0)",
    "scipy (>=1.15.3,<2.0.0)",
    "opencv-python (>=4.11.0.86,<5.0.0.0)",
    "pyqt6 (>=6.9.0,<7.0.0)",
    "pyqtgraph (>=0.13.7,<0.14.0)",
    "sqlalchemy (>=2.0.43,<3.0.0)",
    "pydantic (>=2.11.7,<3.0.0)",
    "cython (>=3.1.4,<4.0.0)"
]

[build-system]
requires = [
    "poetry-core>=2.0.0,<3.0.0",
    "setuptools>=61.0",
    "wheel",
    "Cython>=3.0.0"
]
build-backend = "setuptools.build_meta"

[tool.poetry.group.dev.dependencies]
jupyter = "^1.1.1"
ipykernel = "^6.29.5"
alembic = "^1.16.5"

[tool.poetry.scripts]
build = "cardiomaton_code.build_tools.dev_tasks:build"
clean = "cardiomaton_code.build_tools.dev_tasks:clean"
cardiomaton = "cardiomaton_code.main_with_front.py:main"
